Translated kalandaka to squirrel

--- a/01_agama/ekottarika/11/EA_11_10.md
+++ b/01_agama/ekottarika/11/EA_11_10.md
@@ -11,7 +11,7 @@ next: ../12/EA_12_01.html
 ## Chapter 11: The Non-Returner
 ### 10. Devadatta (2)
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the Kalandaka Bamboo Park of Rājagṛha. He was accompanied by a great assembly of five hundred monks.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the Squirrels’ Bamboo Park of Rājagṛha. He was accompanied by a great assembly of five hundred monks.
 {:#p1}
 
 2\. At the time, there was a monk who heard the Tathāgata predict: “Devadatta will receive a punishment for an eon that cannot be cured.”[\[2\]](#n2){:#ref2} That monk then went to Venerable Ānanda, exchanged greetings with him, and sat to one side. The monk then asked Ānanda, “How is it, Ānanda? Did the Tathāgata examine all of Devadatta’s past before predicting this incurable punishment that he’ll receive for an eon? Or did he derive this prediction from another source?”
