--- a/01_agama/ekottarika/12/EA_12_06.md
+++ b/01_agama/ekottarika/12/EA_12_06.md
@@ -11,7 +11,7 @@ next: EA_12_07.html
 ## Chapter 12: The Single-Entry Path
 ### 6. Senior Years
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the Kalanda Bamboo Grove of Rājagṛha. He was accompanied by a great assembly of five hundred monks.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at the Squirrels’ Bamboo Grove of Rājagṛha. He was accompanied by a great assembly of five hundred monks.
 {:#p1}
 
 2\. At the time, Venerable Mahākāśyapa was living as a forest-dweller. When the time came, he solicited alms without distinguishing between the rich or the poor. He dwelled in one place for one sitting and never moved from it. He sat under trees, on open ground, or in uninhabited places. He wore the five-piece robe, and sometimes kept three garments. Sometimes, he stayed in charnel grounds. Sometimes, he took a single meal, sometimes he ate at midday, and sometimes he practiced the ascetic way, far into his senior years.
