--- a/01_agama/samyukta/01/SA1_29.md
+++ b/01_agama/samyukta/01/SA1_29.md
@@ -15,7 +15,7 @@ next: SA1_30.html
   <th class='en'>29 (23). Rāhula’s Question</th>
   <tr>
     <td class="ch" title='t99.2.5a11'>如是我聞： 一時，佛住王舍城、迦蘭陀竹園。</td>
-    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Squirrels’ Bamboo Grove of Rājagṛha.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.5a12'>爾時，尊者羅睺羅往詣佛所。 頭面禮足，却住一面。 白佛言： 「世尊，云何知、云何見我此識身及外境界一切相能令無有我、我所見、我慢使繫著？」</td>
