--- a/01_agama/samyukta/01/SA1_30.md
+++ b/01_agama/samyukta/01/SA1_30.md
@@ -15,7 +15,7 @@ next: SA1_31.html
   <th class='en'>30 (24). Rāhula’s Question (2)</th>
   <tr>
     <td class="ch" title='t99.2.5b5'>如是我聞： 一時，佛住王舍城、伽蘭陀竹園。</td>
-    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Squirrels’ Bamboo Grove of Rājagṛha.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.5b6'>爾時，世尊告羅睺羅： 「比丘，云何知、云何見我此識身及外境界一切相無有我、我所見、我慢使繫著？」</td>
