--- a/01_agama/samyukta/01/SA1_36.md
+++ b/01_agama/samyukta/01/SA1_36.md
@@ -15,7 +15,7 @@ next: SA1_37.html
   <th class='en'>36 (30). Śroṇa</th>
   <tr>
     <td class="ch" title='t99.2.6a24'>如是我聞： 一時，佛住王舍城迦蘭陀竹園。 爾時，尊者舍利弗在耆闍崛山中。</td>
-    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> The Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha. At the time, Venerable Śāriputra was on Mount Gṛdhrakūṭa.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> The Buddha was staying at the Squirrels’ Bamboo Grove of Rājagṛha. At the time, Venerable Śāriputra was on Mount Gṛdhrakūṭa.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.6a25'>時，有長者子名輸屢那，日日遊行。 到耆闍崛山，詣尊者舍利弗。 問訊起居已，却坐一面。 語舍利弗言： 「若諸沙門、婆羅門於無常色、變易、不安隱色言： 『我勝、我等、我劣。』 何故沙門、婆羅門作如是想，而不見真實？ 若沙門、婆羅門於無常、變易、不安隱受⋯想⋯行⋯識而言： 『我勝、我等、我劣。』 何故沙門、婆羅門作如是想，而不見真實？</td>
