--- a/01_agama/samyukta/06/SA6_5.md
+++ b/01_agama/samyukta/06/SA6_5.md
@@ -11,7 +11,7 @@ next: ../07/index.html
 ## [6. Feeling](index.html)
 ### 5 (470). Poison Arrows
 
-1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Kalandaka’s Bamboo Park of Rājagṛha.
+1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Squirrels’ Bamboo Park of Rājagṛha.
 {:#p1}
 
 2\. It was then that the Bhagavān addressed the monks, “Foolish, unlearned ordinary people give rise to painful feelings, pleasant feelings, and feelings that are not painful or pleasant. Well-versed noble disciples also give rise to painful feelings, pleasant feelings, and feelings that are not painful or pleasant. Monks, what’s the difference between an ordinary person and a noble person?”
