--- a/01_agama/samyukta/26/SA26_11.md
+++ b/01_agama/samyukta/26/SA26_11.md
@@ -15,7 +15,7 @@ next: ../34/index.html
   <th class='en'>11 (1329). Haimavata</th>
   <tr>
     <td class="ch" title='t125.2.365c6'>如是我聞： 一時，佛住王舍城、迦蘭陀竹園。</td>
-    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Squirrels’ Bamboo Grove of Rājagṛha.</td>
   </tr>
   <tr>
     <td class="ch" title='t125.2.365c7'>時，有娑多耆利天神、醯魔波低天神共作約誓： 「若其宮中有寶物出者，必當相語。 不相語者得違約罪。」</td>
@@ -66,7 +66,7 @@ next: ../34/index.html
     <li>“Today, the Buddha, the Bhagavān,<br/>
     Is in the great kingdom of Magadha.<br/>
     He is staying at Rājagṛha there,<br/>
-    In the Kalandaka Bamboo Park.</li>
+    In the Squirrels’ Bamboo Park.</li>
   </ul></td>
 </tr>
 <tr>
