--- a/01_agama/samyukta/01/SA1_38.md
+++ b/01_agama/samyukta/01/SA1_38.md
@@ -15,7 +15,7 @@ next: SA1_39.html
   <th class='en'>38 (32). Śroṇa (3)</th>
   <tr>
     <td class="ch" title='t99.2.7a10'>如是我聞： 一時，佛住王舍城迦蘭陀竹園。 爾時，尊者舍利弗在耆闍崛山。</td>
-    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> The Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha. At the time, Venerable Śāriputra was on Mount Gṛdhrakūṭa.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> The Buddha was staying at the Squirrels’ Bamboo Grove of Rājagṛha. At the time, Venerable Śāriputra was on Mount Gṛdhrakūṭa.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.7a11'>時，有長者子名輸屢那，日日遊行，到耆闍崛山，詣舍利弗所，頭面禮足，却坐一面。</td>
