--- a/01_agama/samyukta/01/SA1_39.md
+++ b/01_agama/samyukta/01/SA1_39.md
@@ -15,7 +15,7 @@ next: SA1_40.html
   <th class='en'>39 (256). Ignorance</th>
   <tr>
     <td class="ch" title='t99.2.64b22'>如是我聞： 一時，佛住王舍城迦蘭陀竹園。 爾時，尊者舍利弗、尊者摩訶拘絺羅在耆闍崛山。</td>
-    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> The Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha. At the time, Venerable Śāriputra and Venerable Mahākauṣṭhila were on Mount Gṛdhrakūṭa.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> The Buddha was staying at the Squirrels’ Bamboo Grove of Rājagṛha. At the time, Venerable Śāriputra and Venerable Mahākauṣṭhila were on Mount Gṛdhrakūṭa.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.64b24'>時，尊者拘絺羅晡時從禪起，詣尊者舍利弗所，共相問訊，種種相娛悅已，却坐一面。</td>
