--- a/01_agama/samyukta/01/SA1_42.md
+++ b/01_agama/samyukta/01/SA1_42.md
@@ -15,7 +15,7 @@ next: SA1_43.html
   <th class='en'>42 (259). Direct Realization</th>
   <tr>
     <td class="ch" title='t99.2.65b5'>如是我聞：一時，佛住王舍城迦蘭陀竹園。爾時，尊者舍利弗共摩訶拘絺羅在耆闍崛山。</td>
-    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha. At the time, the Venerable Śāriputra and Mahākauṣṭhila were on Mount Gṛdhrakūṭa.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Squirrels’ Bamboo Grove of Rājagṛha. At the time, the Venerable Śāriputra and Mahākauṣṭhila were on Mount Gṛdhrakūṭa.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.65b7'>摩訶拘絺羅晡時從禪起，詣舍利弗所，共相問訊，相娛悅已，却坐一面。</td>
