--- a/01_agama/samyukta/02/SA2_49-56.md
+++ b/01_agama/samyukta/02/SA2_49-56.md
@@ -15,7 +15,7 @@ next: SA2_57.html
   <th class='en'>49-56 (199). Rāhula (9-16)</th>
   <tr>
     <td class="ch" title='t99.2.50c27'>如是我聞： 一時，佛住王舍城、迦蘭陀竹園。</td>
-    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Kalandaka Bamboo Grove of Rājagṛha.</td>
+    <td id='p1'>1. Thus I have heard:<sup id="ref1"><a href="#n1">1</a></sup> One time, the Buddha was staying at the Squirrels’ Bamboo Grove of Rājagṛha.</td>
   </tr>
   <tr>
     <td class="ch" title='t99.2.50c28'>爾時，世尊告羅睺羅： 「云何知、云何見於此識身及外一切相無有我、我所、我慢使繫著？」</td>
