found a S. attestation for P. janussoni

--- a/01_agama/madhyama/MA_146.md
+++ b/01_agama/madhyama/MA_146.md
@@ -19,12 +19,12 @@ next: MA_176.html
 2\. The wanderer Pilotika left Śrāvastī at daybreak and went to the Buddha, paid homage by prostrating to him, and withdrew to sit to one side. The Buddha explained the teaching for him, encouraging, rousing, and making him rejoice. After he explained the teaching using measureless methods and encouraging, rousing, and making him rejoice, the Buddha fell silent and waited. Pilotika then bowed his head at the Buddha’s feet, circled him three times, and departed.
 {:#p2}
 
-3\. The priest [Jāṇussoṇi][\[2\]](#n2){: #ref2} was then riding in his beautiful white chariot accompanied by 500 disciples. They left Śrāvastī at daybreak to go a quiet place where he would instruct his disciples in reciting the scriptures. The priest [Jāṇussoṇi] saw Pilotika ahead and asked him, “Vatsāyana, where are you coming from this morning?”
+3\. The priest Jātiśroṇa[\[2\]](#n2){: #ref2} was then riding in his beautiful white chariot accompanied by 500 disciples. They left Śrāvastī at daybreak to go a quiet place where he would instruct his disciples in reciting the scriptures. The priest Jātiśroṇa saw Pilotika ahead and asked him, “Vatsāyana, where are you coming from this morning?”
 {:#p3}
 
 Pilotika replied, “Priest, I’m returning from paying homage and giving support to the Bhagavān.”
 
-4\. [Jāṇussoṇi] asked, “Vatsāyana, would you happen to know the wisdom that the ascetic Gautama studies in that empty and peaceful place?”
+4\. Jātiśroṇa asked, “Vatsāyana, would you happen to know the wisdom that the ascetic Gautama studies in that empty and peaceful place?”
 {:#p4}
 
 5\. Pilotika replied, “Priest, who can know the wisdom that the ascetic Gautama studies in that empty and peaceful place? Priest, if someone knew the wisdom that the ascetic Gautama studies in that empty and peaceful place, they would be like him. But, priest, I’ve only read about four points of meaning from scripture. As a result of those four points of meaning, I believe the Bhagavān is a Tathāgata, Arhat, and Completely Awakened One. The teaching that the Bhagavān explains is good, and the Tathāgata’s disciples are a noble assembly that’s well destined.
@@ -42,16 +42,16 @@ Pilotika replied, “Priest, I’m returning from paying homage and giving suppo
 9\. “Priest, I’ve read scripture with these four points of meaning. As a result of these four points of meaning, I believe the Bhagavān is a Tathāgata, Arhat, and Completely Awakened One. The teaching that he explains is good, and the Tathāgata’s disciples are a noble assembly that’s well destined.”
 {:#p9}
 
-10\. [Jāṇussoṇi] said, “Vatsāyana, you support the ascetic Gautama a great deal. What’s the cause and what’s the reason that you rejoice and approve of him?”
+10\. Jātiśroṇa said, “Vatsāyana, you support the ascetic Gautama a great deal. What’s the cause and what’s the reason that you rejoice and approve of him?”
 
 Pilotika replied, “So it is, priest! So it is! I support the Bhagavān a great deal, and I praise him a great deal. The whole world should support him, too!”
 
 #### The Complete Parable
 
-11\. After hearing these points of meaning, [Jāṇussoṇi] dismounted his chariot and knelt on his right knee with his palms together facing Anāthapiṇḍada’s Park in Jeta’s Grove. He paid homage three times: “Devotion to the Tathāgata, Arhat, and Completely Awakened One!” After doing this three times, he got back on his beautiful white chariot and went to Anāthapiṇḍada’s Park in Jeta’s Grove. When he arrived at the chariot grounds, he dismounted and proceeded to the Buddha on foot. He exchanged greetings with him and withdrew to sit to one side.
+11\. After hearing these points of meaning, Jātiśroṇa dismounted his chariot and knelt on his right knee with his palms together facing Anāthapiṇḍada’s Park in Jeta’s Grove. He paid homage three times: “Devotion to the Tathāgata, Arhat, and Completely Awakened One!” After doing this three times, he got back on his beautiful white chariot and went to Anāthapiṇḍada’s Park in Jeta’s Grove. When he arrived at the chariot grounds, he dismounted and proceeded to the Buddha on foot. He exchanged greetings with him and withdrew to sit to one side.
 {:#p11}
 
-12\. [Jāṇussoṇi] then recounted his conversation with Pilotika for the Buddha in its entirety. After he heard it, the Bhagavān said, “Priest, Pilotika explained the parable of the elephant’s footprint, but he didn’t tell it very well, and it was incomplete. Here is the parable of the elephant’s footprint told well and completely. I’ll explain it for you, so listen well to it.
+12\. Jātiśroṇa then recounted his conversation with Pilotika for the Buddha in its entirety. After he heard it, the Bhagavān said, “Priest, Pilotika explained the parable of the elephant’s footprint, but he didn’t tell it very well, and it was incomplete. Here is the parable of the elephant’s footprint told well and completely. I’ll explain it for you, so listen well to it.
 {:#p12}
 
 13\. “Priest, suppose a skilled elephant trainer wanders in a peaceful place and sees among the trees a large elephant footprint. Seeing it, he believes that it belongs to a huge elephant. Priest, that skilled elephant trainer might not feel confident about it. There’s also an elephant mother named [Kaṇerukā] in the forest. She’s tall and huge, and she possesses such a footprint. Searching for this footprint, the trainer again sees that large elephant print. Seeing it, he believes that the footprint belongs to [another] huge elephant.
@@ -200,19 +200,19 @@ Pilotika replied, “So it is, priest! So it is! I support the Bhagavān a great
 58\. “Priest, what do you think? Is this parable of the elephant’s footprint in this way well told and complete?”
 {:#p58}
 
-[Jāṇussoṇi] replied, “Indeed, Gautama! The parable of the elephant’s footprint is in this way well told and complete.”
+Jātiśroṇa replied, “Indeed, Gautama! The parable of the elephant’s footprint is in this way well told and complete.”
 
-59\. The priest [Jāṇussoṇi] said, “Bhagavān, I have known it. Sugata, I have understood it. Bhagavān, now I take refuge in the Buddha, the Dharma, and the Saṅgha of monks. Please, Bhagavān, accept me as a layman. From today until the end of my life, I’ll devote myself [to the precepts].”
+59\. The priest Jātiśroṇa said, “Bhagavān, I have known it. Sugata, I have understood it. Bhagavān, now I take refuge in the Buddha, the Dharma, and the Saṅgha of monks. Please, Bhagavān, accept me as a layman. From today until the end of my life, I’ll devote myself [to the precepts].”
 {:#p59}
 
-60\. The Buddha spoke thus. When the priest [Jāṇussoṇi] and the wanderer Pilotika heard what the Buddha taught, they rejoiced and approved.
+60\. The Buddha spoke thus. When the priest Jātiśroṇa and the wanderer Pilotika heard what the Buddha taught, they rejoiced and approved.
 {:#p60}
 
 ---
 
 ### Notes
 1. {:#n1} For the source text, cf. <a href="https://cbetaonline.dila.edu.tw/zh/T01n0026_p0656a14" target="_blank">T26.1.656a14-8a27</a>. This <em>sūtra</em> is parallel to [MN 27](https://suttacentral.net/mn27){: target="_blank"}. A large part (§ [18-56](#p18)) of this sūtra is also parallel with MĀ 80 (§ [14-43](..\..\02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_080.md#p14){: target="_blank"} and § [55](..\..\02_madhyama\02_Lesser_Lands_and_Cities\07_King_Dirghayu\MA_080.md#p55){: target="_blank"}) and a couple other MĀ sūtras that recite the gradual path. The main difference between these two sūtras is that MĀ 80 gives a full description of the supernormal powers, while MĀ 146 gives a full description of the four meditations. This material is itself parallel to the stock description of a monk’s training found in several Pali suttas including MN 27. [\[back\]](#ref1)
-2. {:#n2} The Chinese translates his name as “Born Hearing” (生聞), which agrees with the P. Jāṇussoṇi, but I have not found a S. attestation for this name yet. [\[back\]](#ref1)
+2. {:#n2} The Chinese translates his name as “Born Hearing” (生聞). [\[back\]](#ref1)
 
 ---
 
