--- a/01_agama/samyukta/13/SA13_26.md
+++ b/01_agama/samyukta/13/SA13_26.md
@@ -14,7 +14,7 @@ next: SA13_27.html
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. The priest Jāṇussoṇi then came to visit the Buddha and exchanged polite greetings and inquiries with the Bhagavān. Afterward, he withdrew to sit at one side. He said, “Gautama, there is what’s not the other shore and what is the other shore. Gautama, what’s not the other shore, and what is the other shore?”
+2\. The priest Jātiśroṇa then came to visit the Buddha and exchanged polite greetings and inquiries with the Bhagavān. Afterward, he withdrew to sit at one side. He said, “Gautama, there is what’s not the other shore and what is the other shore. Gautama, what’s not the other shore, and what is the other shore?”
 {:#p2}
 
 3\. The Buddha told the priest, “Wrong view is not the other shore, but right view is the other shore. Wrong intention … wrong speech … wrong action … wrong livelihood … wrong method … wrong mindfulness … wrong <em>samādhi</em> is not the other shore, but right intention … right speech … right action … right livelihood … right method … right mindfulness … right <em>samādhi</em> is the other shore.”
@@ -33,7 +33,7 @@ There are some who can follow it;\\
 They are the ones who can cross over\\
 That difficult ford of birth-and-death.”
 
-5\. When the priest Jāṇussoṇi heard what the Buddha taught, he rejoiced and was gladdened. He then rose from his seat and left.
+5\. When the priest Jātiśroṇa heard what the Buddha taught, he rejoiced and was gladdened. He then rose from his seat and left.
 {:#p5}
 
 ---
