--- a/01_agama/samyukta/13/SA13_24.md
+++ b/01_agama/samyukta/13/SA13_24.md
@@ -14,7 +14,7 @@ next: SA13_25.html
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. In the early morning, Venerable Ānanda put on his robe, took his bowl, and went to Śrāvastī to solicit alms. The priest Jāṇussoṇi[\[2\]](#n2){:#ref2} was riding a chariot with white horses, and a crowd of many youths was following him. The horses, chariot, bridle, and whip were white. He wore a white hat, his parasol was white, and he held a white whisk in hand. He wore white clothes, his jewelry was white, white powder was smeared on his body, and his followers were all in white. They were leaving Śrāvastī intending to go to a grove for instruction and recitation. When the crowds saw them, they all said, “Excellent vehicle, excellent vehicle! That’s called the Brahma vehicle!”
+2\. In the early morning, Venerable Ānanda put on his robe, took his bowl, and went to Śrāvastī to solicit alms. The priest Jātiśroṇa[\[2\]](#n2){:#ref2} was riding a chariot with white horses, and a crowd of many youths was following him. The horses, chariot, bridle, and whip were white. He wore a white hat, his parasol was white, and he held a white whisk in hand. He wore white clothes, his jewelry was white, white powder was smeared on his body, and his followers were all in white. They were leaving Śrāvastī intending to go to a grove for instruction and recitation. When the crowds saw them, they all said, “Excellent vehicle, excellent vehicle! That’s called the Brahma vehicle!”
 {:#p2}
 
 3\. Venerable Ānanda then saw that this priest’s retinue and many accoutrements were all white. After he saw this, he went into the city to solicit alms. Returning to the monastery, he put away his robe and bowl and washed his feet. He then went to the Buddha, prostrated at the Buddha’s feet, and withdrew to sit at one side. He said, “Bhagavān, today in the early morning, I put on my robe, took my bowl, and went to Śrāvastī to solicit alms. I saw the priest Jānusoṇi riding a chariot with white horses. His retinue and many accoutrements were all white. A crowd of people called out, ‘Excellent vehicle, excellent vehicle! That’s called the Brahma vehicle!’ Bhagavān, is there a worldly person’s vehicle or a Brahma vehicle in the right teaching and discipline?”
@@ -49,7 +49,7 @@ That defeats the foe of ignorance.”
 ### Notes
 
 1. {:#n1}This <em>sūtra</em> is parallel to [SN 45.4](https://suttacentral.net/sn45.4){:target="_blank"}. The Chinese has fewer verses, but they correspond to the first three stanzas of the Pali <em>sutta</em>. [\[back\]](#ref1)
-2. {:#n2}Guṇabhadra translates his name as “Giving Rise to Hearing,” which would seem to interpret a Sanskrit equivalent like Jānuśṛṇoti. I’ve used the Pali form for now until I find a Sanskrit attestation. [\[back\]](#ref2)
+2. {:#n2}Guṇabhadra translates his name as “Giving Rise to Hearing,” which would seem to interpret a Sanskrit equivalent like Jānuśṛṇoti. I’ve used a Sanskrit attestation found in Yasomitra’s <cite>Sphuṭārthā Abhidharmakoṣavyākhyā</cite>. [\[back\]](#ref2)
 
 ---
 
