Corrections and added index file for T100 in samyukta2 folder.

--- a/01_agama/other/T101_15.md
+++ b/01_agama/other/T101_15.md
@@ -3,6 +3,7 @@ layout: default
 title: 'Taisho 101, Sūtra 15'
 type: kramdown
 base: ../../../
+previous: ../samyukta/index.html
 next: T102.html
 ---
 
