--- a/01_agama/other/T112.md
+++ b/01_agama/other/T112.md
@@ -4,6 +4,7 @@ title: 'Taisho 112: The Eightfold Right Path Sūtra'
 type: kramdown
 base: ../../../
 previous: T110.html
+next: ../samyukta/index.html
 ---
 
 # [The Related Discourses](../../index.html)
