--- a/01_agama/samyukta2/SA2_180.md
+++ b/01_agama/samyukta2/SA2_180.md
@@ -3,8 +3,8 @@ layout: default
 title: 'The Alternate Related Discourses | 180. Crossing the Flood'
 type: kramdown
 base: ../../../
-previous:
-next:
+previous: SA2_46.html
+next: index.html
 ---
 
 # The Alternate Related Discourses
