--- a/01_agama/samyukta2/SA2_46.md
+++ b/01_agama/samyukta2/SA2_46.md
@@ -3,8 +3,8 @@ layout: default
 title: 'The Alternate Related Discourses | 46. The Eighth Day'
 type: kramdown
 base: ../../../
-previous:
-next:
+previous: index.html
+next: SA2_180.html
 ---
 
 # The Alternate Related Discourses
