Created a overall index of translations published on Dharma Pearls and reorganized files a bit.

--- a/01_agama/other/T102.md
+++ b/01_agama/other/T102.md
@@ -3,13 +3,13 @@ layout: default
 title: 'Taisho 102: The Five Aggregates Are Empty Sutra'
 type: kramdown
 base: ../../../
-previous: T101_15.html
+previous: ../samyukta3/T101_15.html
 next: T109.html
 ---
 
 # [The Related Discourses](../../index.html)
 ## Alternate Translations
-#### Taisho 102: The Five Aggregates Are Empty Sutra
+#### Taisho 102: The Five Aggregates Are Empty Sūtra
 
 1\. Thus I have heard:[\[1\]](#n1){: #ref1} One time, the Bhagavān was at Ṛṣipatana in the Deer Preserve of Bārāṇasī.
 {:#p1}
