--- a/01_agama/samyukta3/T101_15.md
+++ b/01_agama/samyukta3/T101_15.md
@@ -4,7 +4,7 @@ title: 'Taisho 101, Sūtra 15'
 type: kramdown
 base: ../../../
 previous: ../samyukta/index.html
-next: T102.html
+next: ../other/T102.html
 ---
 
 # [The Related Discourses](../../index.html)
